--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "core-js": "^3.6.4",
     "firebase-tools": "^8.1.1",
     "vue": "^2.6.11",
+    "vue-easy-slider": "^5.3.2",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.1.6",
+    "vue-slick-carousel": "^1.0.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
