--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase-tools": "^8.1.1",
     "vue": "^2.6.11",
     "vue-easy-slider": "^5.3.2",
+    "vue-range-slider": "^0.6.0",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.1.6",
     "vue-slick-carousel": "^1.0.5",
