--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.1.6",
     "vue-slick-carousel": "^1.0.5",
+    "vueperslides": "^2.8.3",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
