--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-tools": "^8.1.1",
     "vue": "^2.6.11",
     "vue-easy-slider": "^5.3.2",
+    "vue-light-gallery": "^1.0.1",
     "vue-range-slider": "^0.6.0",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.1.6",
