--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "firebase": "^7.14.2",
     "firebase-tools": "^8.1.1",
+    "moment": "^2.26.0",
     "vue": "^2.6.11",
     "vue-easy-slider": "^5.3.2",
     "vue-light-gallery": "^1.0.1",
