--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-easy-slider": "^5.3.2",
     "vue-light-gallery": "^1.0.1",
+    "vue-page-transition": "^0.2.2",
     "vue-range-slider": "^0.6.0",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.1.6",
