--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "vue-light-gallery": "^1.0.1",
     "vue-page-transition": "^0.2.2",
     "vue-range-slider": "^0.6.0",
+    "vue-rate-it": "^2.1.0",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.1.6",
     "vue-slick-carousel": "^1.0.5",
-    "vue-star-rating": "^1.6.1",
     "vueperslides": "^2.8.3",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
